--- a/home.html
+++ b/home.html
@@ -92,6 +92,6 @@
         <div id="weather">Loading weather...</div>
         <div id="google-map"></div>
     </footer>
-
+<script>script.js</script>
   </body>
 </html>
